# advent-of-code-2025

./: Cargo.toml  README.md  mise.toml  rust-toolchain.toml
.github/workflows/: ci.yaml
input/day11/: out-2.txt
input/day12/: input.txt
input/day2/: out-1.txt  out-2.txt
input/day3/: out-2.txt
input/day5/: out-2.txt
input/day7/: out-2.txt
input/day8/: input.txt
input/day9/: out-1.txt  out-2.txt
tests/: test.rs
